# LLVM-IR-FromScratch

./: README.md
llvm_CP10_GEP_vector_modify_data/: CMakeLists.txt  main.cpp  readme.md
llvm_CP1_add1/: main.cpp
llvm_CP2_add_1_2/: main.cpp
llvm_CP3_glob_with_br/: CMakeLists.txt  main.cpp
llvm_CP4_01_add1_or_add2/: main.cpp  readme.md
llvm_CP4_02_phi_add1_or_add2/: main.cpp  readme.md
llvm_CP4_03_allocate_add1_or_add2/: main.cpp  readme.md
llvm_CP5_for_loop/: main.cpp  readme.md
llvm_CP6_for_loop_better/: main.cpp  readme.md
llvm_CP7_GEP_GetVectorType_a_value/: CMakeLists.txt  main.cpp  readme.md
llvm_CP8_GEP_vector_sum/: main.cpp  readme.md
llvm_CP9_GEP_vector_sum2/: CMakeLists.txt  main.cpp  readme.md
